# FuelPriceBot

./: Cargo.toml  Dockerfile  README.md  changelog.md
src/: main.rs  request_builder.rs  response.rs  telegram_handler.rs  utility.rs
