[package]
name = "fuelPriceBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.11", features=["json"]}
serde = {version ="1.0", features=["derive"]}
serde_json = {version ="1.0"}
futures = "0.3"
tokio = {version="1.8", features=["full"]}
chrono = "0.4.19"
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
